crates/ndc-clickhouse/tests/snapshots/query_builder__complex_columns Parameters@01_bind_complex_parameters.request.json.snap
---
source: crates/ndc-clickhouse/tests/query_builder.rs
expression: printed_parameters
input_file: crates/ndc-clickhouse/tests/query_builder/complex_columns/01_bind_complex_parameters.request.json
---
param_p0=[('foo','bar')]
param_p1=[('foo','bar')]
param_p2=((1,'foo'))
param_p3=([(1,'foo')])
param_p4=((1,'foo',[(2,'bar')]))
param_p5=(\N,{'foo':'bar'},[('foo',('foo','bar'))],('foo','bar'))
